# multinationals_trade_and_emission

./: LICENSE  README.md  WWmodels.py  main.py  models.py  neos_ampl.py  pyproject.toml  two_country_simulation.py  ww_models.py
.devcontainer/: Dockerfile  devcontainer.json
tempfolder/: data.xml
testfolder/main/: TM.xlsx  data.xml
xmls/: RRC_emission.xml
