[tool.poetry]
name = "poetry_docker"
version = "0.1.0"
description = ""
authors = ["Yuta Watabe"]

[tool.poetry.dependencies]
python = "3.9.1"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
requests = "*"
ipython = "*"
openpyxl ="*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"